# nemo_ecwg

./: .gitignore  README.md  pyproject.toml
examples/: unagi.ipynb
src/nemoecwg/cases/unagi/: generator.py
src/nemoecwg/cases/unagi/inputs/: cpp_UNAGI.fcm  domaincfg_cfg.jinja  namelist_cfg.jinja
